# yt-clipper-rust

./: .gitignore  Cargo.toml  README.md
src/: crop.rs  lib.rs  main.rs  server.rs  subtitle.rs
