[package]
name = "yt-clipper-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
url = "2"
which = "6"
regex = "1"

# New dependencies for enhanced features
strum = { version = "0.26", features = ["derive"] }  # Enum string conversion
dirs = "5"                                            # Home/cache directories
